@@ -1,6 +1,7 @@
 Revision history for Mooish-Base
 
 {{$NEXT}}
+	- Moose class will automatically be made immutable with Hook::AfterRuntime installed
 
 0.001 - 2025-02-21
 	- First version
